[package]
name = "haddock-restraints"
version = "0.7.1"
edition = "2021"
description = "Generate restraints to be used in HADDOCK"
license = "MIT"
repository = "https://github.com/haddocking/haddock-restraints"
authors = ["Rodrigo V. Honorato <r.vargashonorato@uu.nl>"]
keywords = [
  "haddock",
  "restraints",
  "bioinformatics",
  "structural-biology",
  "protein-docking",
]
categories = ["science::bioinformatics", "science"]


[dependencies]
rust-sasa = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pdbtbx = "0.12"
rand = "0.8"
kd-tree = "0.6.0"
clap = { version = "4.5", features = ["derive"] }
nalgebra = "0.33"
itertools = "0.14"
pdb-handler = ">=0.1"
tempfile = "3.16"
