[package]
name = "haddock-restraints"
version = "0.10.0"
edition = "2024"
description = "Generate restraints to be used in HADDOCK"
license = "MIT"
repository = "https://github.com/haddocking/haddock-restraints"
authors = ["Rodrigo V. Honorato <r.vargashonorato@uu.nl>"]
keywords = [
  "haddock",
  "restraints",
  "bioinformatics",
  "structural-biology",
  "protein-docking",
]
categories = ["science::bioinformatics", "science"]


[lib]
name = "haddock_restraints"
path = "src/lib.rs"

[[bin]]
name = "haddock-restraints"
path = "src/main.rs"

[dependencies]
rust-sasa = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pdbtbx = "0.12"
rand = "0.9"
kd-tree = "0.6.1"
clap = { version = "4.5", features = ["derive"] }
nalgebra = "0.34"
itertools = "0.14"
pdb-handler = ">=0.1"
tempfile = "3.20"
